TFP-3858: Lager søknadsbuildere og legger inn fpinfo, fpfordel og fpsoknad-mottak i verdikjeden.